gitops/applications/immich/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: immich
spec:
  parentRefs:
  - name: gateway-api
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - immich.home
  rules:
  - backendRefs:
    - name: immich-server
      port: 2283
